--- a/tests/dummy/app/index.html
+++ b/tests/dummy/app/index.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Dummy</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Dummy</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    {{content-for 'head'}}
+  {{content-for 'head'}}
 
-    <link rel="stylesheet" href="assets/vendor.css">
-    <link rel="stylesheet" href="assets/dummy.css">
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
-    {{content-for 'head-footer'}}
-  </head>
-  <body>
-    {{content-for 'body'}}
+  <link rel="stylesheet" href="assets/vendor.css">
+  <link rel="stylesheet" href="assets/dummy.css">
 
-    <script src="assets/vendor.js"></script>
-    <script src="assets/dummy.js"></script>
+  {{content-for 'head-footer'}}
+</head>
+<body>
+{{content-for 'body'}}
 
-    {{content-for 'body-footer'}}
-  </body>
+<script src="assets/vendor.js"></script>
+<script src="assets/dummy.js"></script>
+
+{{content-for 'body-footer'}}
+
+<link href='http://fonts.googleapis.com/css?family=Raleway:500,200' rel='stylesheet' type='text/css'>
+
+</body>
 </html>
