--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <base href="/" />
-<meta name="dummy/config/environment" content="%7B%22modulePrefix%22%3A%22dummy%22%2C%22environment%22%3A%22production%22%2C%22baseURL%22%3A%22/%22%2C%22locationType%22%3A%22auto%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%7D%2C%22APP%22%3A%7B%22contentSecurityPolicy%22%3A%7B%22font-src%22%3A%22%27self%27%20https%3A//maxcdn.bootstrapcdn.com%22%2C%22img-src%22%3A%22%27self%27%20https%3A//maxcdn.bootstrapcdn.com%22%2C%22style-src%22%3A%22%27unsafe-inline%27%20%27self%27%20https%3A//maxcdn.bootstrapcdn.com%22%2C%22media-src%22%3A%22%27self%27%20https%3A//maxcdn.bootstrapcdn.com%22%7D%2C%22name%22%3A%22rate-limit-computed%22%2C%22version%22%3A%220.0.0.01e47279%22%7D%2C%22contentSecurityPolicyHeader%22%3A%22Content-Security-Policy-Report-Only%22%2C%22contentSecurityPolicy%22%3A%7B%22default-src%22%3A%22%27none%27%22%2C%22script-src%22%3A%22%27self%27%22%2C%22font-src%22%3A%22%27self%27%22%2C%22connect-src%22%3A%22%27self%27%22%2C%22img-src%22%3A%22%27self%27%22%2C%22style-src%22%3A%22%27self%27%22%2C%22media-src%22%3A%22%27self%27%22%7D%2C%22exportApplicationGlobal%22%3Afalse%7D" />
+  
+<meta name="dummy/config/environment" content="%7B%22modulePrefix%22%3A%22dummy%22%2C%22environment%22%3A%22production%22%2C%22baseURL%22%3A%22/%22%2C%22locationType%22%3A%22hash%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%7D%2C%22APP%22%3A%7B%22contentSecurityPolicy%22%3A%7B%22font-src%22%3A%22%27self%27%20https%3A//maxcdn.bootstrapcdn.com%22%2C%22img-src%22%3A%22%27self%27%20https%3A//maxcdn.bootstrapcdn.com%22%2C%22style-src%22%3A%22%27unsafe-inline%27%20%27self%27%20https%3A//maxcdn.bootstrapcdn.com%22%2C%22media-src%22%3A%22%27self%27%20https%3A//maxcdn.bootstrapcdn.com%22%7D%2C%22name%22%3A%22rate-limit-computed%22%2C%22version%22%3A%221.0.0%22%7D%2C%22contentSecurityPolicyHeader%22%3A%22Content-Security-Policy-Report-Only%22%2C%22contentSecurityPolicy%22%3A%7B%22default-src%22%3A%22%27none%27%22%2C%22script-src%22%3A%22%27self%27%22%2C%22font-src%22%3A%22%27self%27%22%2C%22connect-src%22%3A%22%27self%27%22%2C%22img-src%22%3A%22%27self%27%22%2C%22style-src%22%3A%22%27self%27%22%2C%22media-src%22%3A%22%27self%27%22%7D%2C%22exportApplicationGlobal%22%3Afalse%7D" />
 
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
@@ -22,7 +22,7 @@
 
 
 <script src="assets/vendor-6c7b24d5c248361543888b869fab5d70.js"></script>
-<script src="assets/dummy-563b658c64cad17520cc7ad625dba856.js"></script>
+<script src="assets/dummy-f83771cf93b253879066e177a469721c.js"></script>
 
 
 
